# Learn_notes

./: .gitignore  setenv.sh
learn_ai/: .clang-format
learn_ai/MCMC/: Makefile
learn_asio/: .clang-format  CMakeLists.txt  Makefile
learn_asio/include/: ct_socket.h
learn_asio/note/: chapter01.md
learn_asio/src/: buffer.cpp  ct_socket.cpp  httpclinet.cpp  syncClient.cpp  syncServer.cpp
learn_cpp/: Makefile  class  crc32.txt  factorial  test  test.c  test.cpp
learn_cpp/C++Modern/: C++11.md  C++14.md  C++17.md  allocator.md  filesystem.md  metaprogram.md
learn_cpp/Macors/: chapter04.md  chapter05.md  test  test.c  test.i  test.ipp
learn_cpp/SIMD/: .nvim.lua  Makefile  main.cpp  watcher.sh
learn_cpp/Unsorted/: poll.md
learn_cpp/WinSDK/: Environment.md  What is a Window.md  Windows Coding Conventions.md  Working with Strings.md
learn_cpp/include/: unmtx.h
learn_cpp/learn_cmake/: README.md  chapter01.md  chapter02.md
learn_cpp/learn_cmake/demo/: CMakeLists.txt  config.h.in  hello.cpp  main.cpp
learn_cpp/learn_make/: README.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md
learn_cpp/src/: boost_test.cpp  factorial.cpp
learn_cpp/web/: epoll_server.cpp  poll_server.cpp  process_server.cpp  select_server.cpp  tcp_client.cpp  tcp_package.c  tcp_package.h  tcp_package.h.gch  tcp_server.cpp  thread_server.cpp  udp_client.cpp  udp_server.cpp
learn_gl/: bin  compile_commands.json  vscode.py  xmake.lua
learn_gl/demo/: camera_circle.cpp  coordinate_systems.cpp  gravity_sim.cpp  rectangle.c  shader-class.cpp  shaders_uniform.c  texture.cpp  traingle.c  transform.cpp  (+3 more)
learn_shell/: chapter01.md  chapter02.md
learn_tbb/: parallel.md  task.md
learn_verilog/: full_adder.v  multi_bits_gate.v  simple_combinational_gate.v
learn_xml/: ChangeXmlFile  ChangeXmlFile.cpp  ChangedXml.xml  CreateXmlFile  CreateXmlFile.cpp  CreateXmlFile_cn  CreateXmlFile_cn.cpp  CreatedXML.xml  CreatedXml_cn.xml  Makefile  ParseXmlFile  ParseXmlFile.cpp  XPathForXmlFile  XPathForXmlFile.cpp  compile_commands.json  cxml  wxn_codeConv.cpp  wxn_codeConv.h
(+133 files in other folders)
